Adding PYTHONPATH to twip pythonPackages.

--- a/Qitom/CMakeLists.txt
+++ b/Qitom/CMakeLists.txt
@@ -1000,6 +1000,10 @@ if(MSVC)
     file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../symbols/dll )
 endif()
 
+# set the path to the twip pythonPackages
+set(PYTHONPATH_REL "${CMAKE_CURRENT_SOURCE_DIR}/../../../pythonPackages")
+get_filename_component(PYTHONPATH ${PYTHONPATH_REL} ABSOLUTE)
+
 #ADD a batch file for itom-release 
 if(MSVC)
     configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/../itom.bat.in ${CMAKE_CURRENT_BINARY_DIR}/../itom.bat )
@@ -1033,11 +1037,9 @@ set(DEBUG_PATH  "PATH=${QT_BINARY_DIR}"
                 "${VTK_DIR}/../../../bin"
                 "%PATH%")
 
-set(PYTHONPATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../pythonPackages")
-get_filename_component(PYTHONPATH_ABS ${PYTHONPATH} ABSOLUTE)
 set_target_properties(${PROJECT_NAME} PROPERTIES
     VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:${PROJECT_NAME}>"
     VS_DEBUGGER_COMMAND           "$<TARGET_FILE:${PROJECT_NAME}>"
-    VS_DEBUGGER_ENVIRONMENT       "${DEBUG_PATH}\nPYTHONPATH=${PYTHONPATH_ABS}"
+    VS_DEBUGGER_ENVIRONMENT       "${DEBUG_PATH}\nPYTHONPATH=${PYTHONPATH}"
     # this does only work when build/itom/Qitom/qitom.vcxproj.user does not exist
 )
