Adding checks to cmake that the string variables for splashscreen and icon are set

--- a/Qitom/CMakeLists.txt
+++ b/Qitom/CMakeLists.txt
@@ -120,28 +120,48 @@ endif()
 
 if(BUILD_WITH_SPECIFICSPLASHSCREEN)
     set(SPLASHSCREEN_FILE_PATH CACHE FILEPATH "Path to the splashscreen image")
-    add_definitions(-DUSESPLASHSCREENFILE -D_USESPLASHSCREENFILE)
-    add_definitions(-DSPLASHSCREEN_FILE_PATH=${SPLASHSCREEN_FILE_PATH})
+    if(SPLASHSCREEN_FILE_PATH STREQUAL "")
+       message(FATAL_ERROR "SPLASHSCREEN_FILE_PATH not set")
+    else()
+       add_definitions(-DUSESPLASHSCREENFILE -D_USESPLASHSCREENFILE)
+       add_definitions(-DSPLASHSCREEN_FILE_PATH="${SPLASHSCREEN_FILE_PATH}")
+    endif()
 endif()
 
 if(BUILD_WITH_SPECIFICSPLASHSCREENTEXT)
     set(SPLASHSCREEN_TEXT_COLOR CACHE STRING "ARGB Color Code for Splashescreen text as hexcode AARRGGBB")
-    add_definitions(-DUSESPLASHSCREENTEXTCOLOR -D_USESPLASHSCREENTEXTCOLOR)
-    add_definitions(-DSPLASHSCREEN_TEXT_COLOR=${SPLASHSCREEN_TEXT_COLOR})
+    if(SPLASHSCREEN_TEXT_COLOR STREQUAL "")
+       message(FATAL_ERROR "SPLASHSCREEN_TEXT_COLOR not set")
+    else()
+       add_definitions(-DUSESPLASHSCREENTEXTCOLOR -D_USESPLASHSCREENTEXTCOLOR)
+       add_definitions(-DSPLASHSCREEN_TEXT_COLOR=${SPLASHSCREEN_TEXT_COLOR})
+    endif()
 endif()
 
 if(BUILD_WITH_SPECIFICSPLASHSCREENTEXTPOSITION)
     set(SPLASHSCREEN_TEXT_POSITION_HORIZONTAL CACHE STRING "Relativ splashscreen text postion in horizontal direction. Value in percent (0.0-1.0)")
     set(SPLASHSCREEN_TEXT_POSITION_VERTICAL CACHE STRING "Relativ splashscreen text postion in horizontal direction. Value in percent (0.0-1.0)")
     add_definitions(-DUSESPLASHSCREENTEXTPOSITION -D_USESPLASHSCREENTEXTPOSITION)
-    add_definitions(-DSPLASHSCREEN_TEXT_POSITION_HOR=${SPLASHSCREEN_TEXT_POSITION_HORIZONTAL})
-    add_definitions(-DSPLASHSCREEN_TEXT_POSITION_VER=${SPLASHSCREEN_TEXT_POSITION_VERTICAL})
+    if(SPLASHSCREEN_TEXT_POSITION_HORIZONTAL STREQUAL "")
+       message(FATAL_ERROR "SPLASHSCREEN_TEXT_POSITION_HORIZONTAL not set")
+    else()
+      add_definitions(-DSPLASHSCREEN_TEXT_POSITION_HOR=${SPLASHSCREEN_TEXT_POSITION_HORIZONTAL})
+    endif()
+    if(SPLASHSCREEN_TEXT_POSITION_VERTICAL STREQUAL "")
+       message(FATAL_ERROR "SPLASHSCREEN_TEXT_POSITION_VERTICAL not set")
+    else()
+      add_definitions(-DSPLASHSCREEN_TEXT_POSITION_VER=${SPLASHSCREEN_TEXT_POSITION_VERTICAL})
+    endif()
 endif()
 
 if(BUILD_WITH_ICON)
     set(ICON_FILE_PATH CACHE FILEPATH "Path to the app icon image")
-    add_definitions(-DUSEAPPICON -D_USEAPPICON)
-    add_definitions(-DAPPICON_FILE_PATH=${ICON_FILE_PATH})
+    if(ICON_FILE_PATH STREQUAL "")
+       message(FATAL_ERROR "ICON_FILE_PATH not set")
+    else()
+      add_definitions(-DUSEAPPICON -D_USEAPPICON)
+      add_definitions(-DAPPICON_FILE_PATH="${ICON_FILE_PATH}")
+    endif()
 endif()
 
 if(BUILD_WITH_GIMMICKS)
