--- a/shape/CMakeLists.txt
+++ b/shape/CMakeLists.txt
@@ -41,7 +41,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR} ${PROJECT_SOURC
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # add 3rd party packages
-itom_find_package_qt(ON Core Gui LinguistTools)
+itom_find_package_qt(ON Core Designer LinguistTools)
 find_package(OpenCV COMPONENTS core imgproc REQUIRED)
 
 # set some preprocessor directives
