Fixing openCV_Dir

--- a/Qitom/CMakeLists.txt
+++ b/Qitom/CMakeLists.txt
@@ -1105,7 +1105,7 @@ endif(APPLE)
 # set the debugger environment for visual studio (semicolons will be added
 # because this is written as a list)
 set(DEBUG_PATH  "PATH=${QT_BINARY_DIR}"
-                "${OpenCV_DIR}/${OpenCV_ARCH}/${OpenCV_RUNTIME}/bin"
+                "${OpenCV_DIR}/../bin"
                 "${PCL_DIR}/../bin"
                 "${Python_ROOT_DIR}"
                 "${Boost_LIBRARY_DIR_DEBUG}"
