Adding files to debug with VSCode on windows.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,6 +45,18 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "Windows Debug",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/../../build/itom/qitomd.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [{"name": "PATH", "value": "C:/consignoDevelop/build/itom;C:/consignoDevelop/3rdParty/Qt6.5/6.5.3/msvc2019_64/bin;C:/consignoDevelop/3rdParty/OpenCV4.9.0/x64/vc17/lib/../bin;C:/consignoDevelop/3rdPartyPCL/PCL1.13.0/cmake/../bin;C:/consignoDevelop/3rdParty/Python;;C:/consignoDevelop/3rdPartyPCL/VTK9.2.2/lib/cmake/vtk-9.2/../../../bin;%PATH%"}],
+            "console": "integratedTerminal",
+            "visualizerFile": "${workspaceFolder}/../../3rdParty/qt6.natvis"
         }
     ]
 }
