--- a/Qitom/version.rc.in
+++ b/Qitom/version.rc.in
@@ -1,3 +1,16 @@
+/**
+ * Modified by twip optical solutions GmbH (https://www.twip-os.com). The modifications
+ * are listed below and the whole project is hosted on https://github.com/twip-os/itom.
+ * The original version of this software can be found at
+ * https://github.com/itom-project/itom.
+ *
+ * The modified software is still subject to the terms of the GNU Lesser General Public
+ * License (LGPL), version 2.0.
+ *
+ * Modifications:
+ * 15.12.2023   Changing the information to twip itom.
+ */
+
 #include <windows.h>
 
 VS_VERSION_INFO     VERSIONINFO
